login/register/logout functionality added
login/register/logout functionality added. Plus some adjustments to the search functionality. Showing h1 that says no movies found if the search criteria do not match any movie's name

--- a/client/src/components/catalog/Catalog.module.css
+++ b/client/src/components/catalog/Catalog.module.css
@@ -61,3 +61,8 @@
     align-items: center;
     margin-top: 10px;
 }
+.noResultsTitle{
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 400 !important;
+}
